--- a/popovers.html
+++ b/popovers.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="js/bootstrap.bundle.min.js" defer></script>
     <title>Popovers</title>
 </head>
 <body>
@@ -16,6 +15,7 @@
         </div>
     </div>
 
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script>
         const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
         const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
