--- a/plantilla.html
+++ b/plantilla.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="js/bootstrap.bundle.min.js" defer></script>
     <title></title>
 </head>
 <body>
@@ -15,5 +14,7 @@
             </div>
         </div>
     </div>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
