--- a/practicas/tablaPrecios.html
+++ b/practicas/tablaPrecios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <title>Grid de bootstrap 5</title>
+    <title>Tabla de Precios</title>
     <style>
 
     </style>
